# First-Responder-Agent

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  benchmark_results.json  requirements.txt
demo/: scenarios.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: SeverityBadge.tsx
scripts/: benchmark.py  download_data.sh  ingest.py  validate_demo.py  warmup.sh
src/api/: main.py  prompts.py  rag.py  schema.py
src/cpp/api/: bindings.cpp
src/cpp/ingestion/: csv_parser.cpp  csv_parser.h
src/cpp/kernels/: filter.cu  filter.cuh
tests/: test_parser.cpp
